--- a/.gitattributes
+++ b/.gitattributes
@@ -16755,15 +16755,22 @@ contrib/ipfilter/NAT.FreeBSD -text
 contrib/ipfilter/README -text
 contrib/ipfilter/STYLE.TXT -text
 contrib/ipfilter/WhatsNew40.txt -text
+contrib/ipfilter/WhatsNew50.txt svneol=native#text/plain
 contrib/ipfilter/Y2K -text
+contrib/ipfilter/arc4random.c svneol=native#text/plain
 contrib/ipfilter/bpf-ipf.h -text
 contrib/ipfilter/bpf_filter.c -text
 contrib/ipfilter/bsdinstall -text
 contrib/ipfilter/etc/protocols -text
 contrib/ipfilter/etc/services -text
+contrib/ipfilter/genmask.c svneol=native#text/plain
+contrib/ipfilter/ip_dstlist.c svneol=native#text/plain
+contrib/ipfilter/ip_dstlist.h svneol=native#text/plain
 contrib/ipfilter/ip_fil.c -text
+contrib/ipfilter/ip_fil_compat.c svneol=native#text/plain
 contrib/ipfilter/ip_msnrpc_pxy.c -text
 contrib/ipfilter/ipf.h -text
+contrib/ipfilter/ipf_rb.h svneol=native#text/plain
 contrib/ipfilter/iplang/.cvsignore -text
 contrib/ipfilter/iplang/BNF -text
 contrib/ipfilter/iplang/Makefile -text
@@ -16831,20 +16838,29 @@ contrib/ipfilter/lib/addipopt.c -text
 contrib/ipfilter/lib/addkeep.c -text
 contrib/ipfilter/lib/alist_free.c -text
 contrib/ipfilter/lib/alist_new.c -text
+contrib/ipfilter/lib/allocmbt.c svneol=native#text/plain
+contrib/ipfilter/lib/assigndefined.c svneol=native#text/plain
 contrib/ipfilter/lib/bcopywrap.c -text
 contrib/ipfilter/lib/binprint.c -text
 contrib/ipfilter/lib/buildopts.c -text
 contrib/ipfilter/lib/checkrev.c -text
+contrib/ipfilter/lib/connecttcp.c svneol=native#text/plain
 contrib/ipfilter/lib/count4bits.c -text
 contrib/ipfilter/lib/count6bits.c -text
 contrib/ipfilter/lib/debug.c -text
+contrib/ipfilter/lib/dupmbt.c svneol=native#text/plain
 contrib/ipfilter/lib/extras.c -text
 contrib/ipfilter/lib/facpri.c -text
 contrib/ipfilter/lib/facpri.h -text
+contrib/ipfilter/lib/familyname.c svneol=native#text/plain
 contrib/ipfilter/lib/fill6bits.c -text
+contrib/ipfilter/lib/findword.c svneol=native#text/plain
 contrib/ipfilter/lib/flags.c -text
+contrib/ipfilter/lib/freembt.c svneol=native#text/plain
+contrib/ipfilter/lib/ftov.c svneol=native#text/plain
 contrib/ipfilter/lib/genmask.c -text
 contrib/ipfilter/lib/gethost.c -text
+contrib/ipfilter/lib/geticmptype.c svneol=native#text/plain
 contrib/ipfilter/lib/getifname.c -text
 contrib/ipfilter/lib/getline.c -text
 contrib/ipfilter/lib/getnattype.c -text
@@ -16857,10 +16873,14 @@ contrib/ipfilter/lib/hostmask.c -text
 contrib/ipfilter/lib/hostname.c -text
 contrib/ipfilter/lib/hostnum.c -text
 contrib/ipfilter/lib/icmpcode.c -text
+contrib/ipfilter/lib/icmptypename.c svneol=native#text/plain
+contrib/ipfilter/lib/icmptypes.c svneol=native#text/plain
 contrib/ipfilter/lib/inet_addr.c -text
 contrib/ipfilter/lib/initparse.c -text
+contrib/ipfilter/lib/interror.c svneol=native#text/plain
 contrib/ipfilter/lib/ionames.c -text
 contrib/ipfilter/lib/ipf_dotuning.c -text
+contrib/ipfilter/lib/ipf_perror.c svneol=native#text/plain
 contrib/ipfilter/lib/ipft_ef.c -text
 contrib/ipfilter/lib/ipft_hx.c -text
 contrib/ipfilter/lib/ipft_pc.c -text
@@ -16872,6 +16892,8 @@ contrib/ipfilter/lib/kmem.c -text
 contrib/ipfilter/lib/kmem.h -text
 contrib/ipfilter/lib/kmemcpywrap.c -text
 contrib/ipfilter/lib/kvatoname.c -text
+contrib/ipfilter/lib/load_dstlist.c svneol=native#text/plain
+contrib/ipfilter/lib/load_dstlistnode.c svneol=native#text/plain
 contrib/ipfilter/lib/load_file.c -text
 contrib/ipfilter/lib/load_hash.c -text
 contrib/ipfilter/lib/load_hashnode.c -text
@@ -16881,6 +16903,8 @@ contrib/ipfilter/lib/load_poolnode.c -text
 contrib/ipfilter/lib/load_url.c -text
 contrib/ipfilter/lib/loglevel.c -text
 contrib/ipfilter/lib/make_range.c -text
+contrib/ipfilter/lib/mb_hexdump.c svneol=native#text/plain
+contrib/ipfilter/lib/msgdsize.c svneol=native#text/plain
 contrib/ipfilter/lib/mutex_emul.c -text
 contrib/ipfilter/lib/nametokva.c -text
 contrib/ipfilter/lib/nat_setgroupmap.c -text
@@ -16891,38 +16915,62 @@ contrib/ipfilter/lib/optprint.c -text
 contrib/ipfilter/lib/optprintv6.c -text
 contrib/ipfilter/lib/optvalue.c -text
 contrib/ipfilter/lib/parse.c -text
+contrib/ipfilter/lib/parsefields.c svneol=native#text/plain
+contrib/ipfilter/lib/parseipfexpr.c svneol=native#text/plain
+contrib/ipfilter/lib/parsewhoisline.c svneol=native#text/plain
+contrib/ipfilter/lib/poolio.c svneol=native#text/plain
 contrib/ipfilter/lib/portname.c -text
 contrib/ipfilter/lib/portnum.c -text
 contrib/ipfilter/lib/ports.c -text
+contrib/ipfilter/lib/prependmbt.c svneol=native#text/plain
 contrib/ipfilter/lib/print_toif.c -text
+contrib/ipfilter/lib/printactiveaddr.c svneol=native#text/plain
 contrib/ipfilter/lib/printactivenat.c -text
+contrib/ipfilter/lib/printaddr.c svneol=native#text/plain
 contrib/ipfilter/lib/printaps.c -text
 contrib/ipfilter/lib/printbuf.c -text
+contrib/ipfilter/lib/printdstl_live.c svneol=native#text/plain
+contrib/ipfilter/lib/printdstlist.c svneol=native#text/plain
+contrib/ipfilter/lib/printdstlistdata.c svneol=native#text/plain
+contrib/ipfilter/lib/printdstlistnode.c svneol=native#text/plain
+contrib/ipfilter/lib/printdstlistpolicy.c svneol=native#text/plain
+contrib/ipfilter/lib/printfieldhdr.c svneol=native#text/plain
 contrib/ipfilter/lib/printfr.c -text
 contrib/ipfilter/lib/printfraginfo.c -text
 contrib/ipfilter/lib/printhash.c -text
 contrib/ipfilter/lib/printhash_live.c -text
 contrib/ipfilter/lib/printhashdata.c -text
 contrib/ipfilter/lib/printhashnode.c -text
+contrib/ipfilter/lib/printhost.c svneol=native#text/plain
 contrib/ipfilter/lib/printhostmap.c -text
 contrib/ipfilter/lib/printhostmask.c -text
 contrib/ipfilter/lib/printifname.c -text
 contrib/ipfilter/lib/printip.c -text
+contrib/ipfilter/lib/printipfexpr.c svneol=native#text/plain
+contrib/ipfilter/lib/printiphdr.c svneol=native#text/plain
 contrib/ipfilter/lib/printlog.c -text
+contrib/ipfilter/lib/printlookup.c svneol=native#text/plain
 contrib/ipfilter/lib/printmask.c -text
 contrib/ipfilter/lib/printnat.c -text
+contrib/ipfilter/lib/printnataddr.c svneol=native#text/plain
+contrib/ipfilter/lib/printnatfield.c svneol=native#text/plain
+contrib/ipfilter/lib/printnatside.c svneol=native#text/plain
 contrib/ipfilter/lib/printpacket.c -text
 contrib/ipfilter/lib/printpacket6.c -text
 contrib/ipfilter/lib/printpool.c -text
 contrib/ipfilter/lib/printpool_live.c -text
 contrib/ipfilter/lib/printpooldata.c -text
+contrib/ipfilter/lib/printpoolfield.c svneol=native#text/plain
 contrib/ipfilter/lib/printpoolnode.c -text
 contrib/ipfilter/lib/printportcmp.c -text
 contrib/ipfilter/lib/printproto.c -text
 contrib/ipfilter/lib/printsbuf.c -text
 contrib/ipfilter/lib/printstate.c -text
+contrib/ipfilter/lib/printstatefields.c svneol=native#text/plain
+contrib/ipfilter/lib/printtcpflags.c svneol=native#text/plain
 contrib/ipfilter/lib/printtqtable.c -text
 contrib/ipfilter/lib/printtunable.c -text
+contrib/ipfilter/lib/printunit.c svneol=native#text/plain
 contrib/ipfilter/lib/ratoi.c -text
 contrib/ipfilter/lib/ratoui.c -text
 contrib/ipfilter/lib/remove_hash.c -text
@@ -16931,6 +16979,12 @@ contrib/ipfilter/lib/remove_pool.c -text
 contrib/ipfilter/lib/remove_poolnode.c -text
 contrib/ipfilter/lib/resetlexer.c -text
 contrib/ipfilter/lib/rwlock_emul.c -text
+contrib/ipfilter/lib/save_execute.c svneol=native#text/plain
+contrib/ipfilter/lib/save_file.c svneol=native#text/plain
+contrib/ipfilter/lib/save_nothing.c svneol=native#text/plain
+contrib/ipfilter/lib/save_syslog.c svneol=native#text/plain
+contrib/ipfilter/lib/save_v1trap.c svneol=native#text/plain
+contrib/ipfilter/lib/save_v2trap.c svneol=native#text/plain
 contrib/ipfilter/lib/tcp_flags.c -text
 contrib/ipfilter/lib/tcpflags.c -text
 contrib/ipfilter/lib/tcpoptnames.c -text
@@ -16939,6 +16993,7 @@ contrib/ipfilter/lib/v6ionames.c -text
 contrib/ipfilter/lib/v6optvalue.c -text
 contrib/ipfilter/lib/var.c -text
 contrib/ipfilter/lib/verbose.c -text
+contrib/ipfilter/lib/vtof.c svneol=native#text/plain
 contrib/ipfilter/man/Makefile -text
 contrib/ipfilter/man/ipf.4 -text
 contrib/ipfilter/man/ipf.5 -text
@@ -16964,10 +17019,20 @@ contrib/ipfilter/man/mkfilters.1 -text
 contrib/ipfilter/md5.c -text
 contrib/ipfilter/md5.h -text
 contrib/ipfilter/mkfilters -text
+contrib/ipfilter/ml_ipl.c svneol=native#text/plain
 contrib/ipfilter/mlf_ipl.c -text
 contrib/ipfilter/mlf_rule.c -text
+contrib/ipfilter/mlfk_ipl.c svneol=native#text/plain
 contrib/ipfilter/mlfk_rule.c -text
 contrib/ipfilter/mlh_rule.c -text
+contrib/ipfilter/mli_ipl.c svneol=native#text/plain
+contrib/ipfilter/mln_ipl.c svneol=native#text/plain
+contrib/ipfilter/mln_rule.c svneol=native#text/plain
+contrib/ipfilter/mlo_ipl.c svneol=native#text/plain
+contrib/ipfilter/mlo_rule.c svneol=native#text/plain
+contrib/ipfilter/mls_ipl.c svneol=native#text/plain
+contrib/ipfilter/mls_rule.c svneol=native#text/plain
+contrib/ipfilter/mlso_rule.c svneol=native#text/plain
 contrib/ipfilter/net/.cvsignore -text
 contrib/ipfilter/opt_inet6.h -text
 contrib/ipfilter/opts.h -text
@@ -16982,6 +17047,7 @@ contrib/ipfilter/perl/ipfmeta.pl -text
 contrib/ipfilter/perl/logfilter.pl -text
 contrib/ipfilter/perl/plog -text
 contrib/ipfilter/radix.c -text
+contrib/ipfilter/radix_ipf.c svneol=native#text/plain
 contrib/ipfilter/radix_ipf.h -text
 contrib/ipfilter/rules/.cvsignore -text
 contrib/ipfilter/rules/BASIC.NAT -text
@@ -17018,6 +17084,7 @@ contrib/ipfilter/samples/proxy.c -text
 contrib/ipfilter/samples/relay.c -text
 contrib/ipfilter/samples/userauth.c -text
 contrib/ipfilter/snoop.h -text
+contrib/ipfilter/sys/tree.h svneol=native#text/plain
 contrib/ipfilter/test/.cvsignore -text
 contrib/ipfilter/test/Makefile -text
 contrib/ipfilter/test/README.TXT -text
@@ -17336,6 +17403,7 @@ contrib/ipfilter/tools/ipf_y.y -text
 contrib/ipfilter/tools/ipfcomp.c -text
 contrib/ipfilter/tools/ipfs.c -text
 contrib/ipfilter/tools/ipfstat.c -text
+contrib/ipfilter/tools/ipfsyncd.c svneol=native#text/plain
 contrib/ipfilter/tools/ipftest.c -text
 contrib/ipfilter/tools/ipmon.c -text
 contrib/ipfilter/tools/ipmon_y.y -text
