--- a/usr.bin/unexpand/Makefile
+++ b/usr.bin/unexpand/Makefile
@@ -1,7 +1,8 @@
-#	From: @(#)Makefile	8.1 (Berkeley) 6/6/93
 # $MidnightBSD$
+#	From: @(#)Makefile	8.1 (Berkeley) 6/6/93
+# $FreeBSD: stable/10/usr.bin/unexpand/Makefile 276486 2014-12-31 23:25:37Z ngie $
 
 PROG=	unexpand
-NO_MAN=
+MAN=
 
 .include <bsd.prog.mk>
