--- a/usr.bin/tsort/Makefile
+++ b/usr.bin/tsort/Makefile
@@ -1,5 +1,6 @@
-#	@(#)Makefile	8.1 (Berkeley) 6/9/93
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 6/9/93
+# $FreeBSD: stable/10/usr.bin/tsort/Makefile 87714 2001-12-12 00:06:52Z markm $
 
 PROG=	tsort
 
