--- a/usr.sbin/amd/Makefile
+++ b/usr.sbin/amd/Makefile
@@ -3,9 +3,11 @@
 # Makefile for amd
 # 	This file is under a "BSD" copyright (c) by David O'Brien 1998
 #
-# $FreeBSD$
+# $MidnightBSD$
 
-SUBDIR= include libamu amd amq doc fixmount fsinfo hlfsd mk-amd-map pawd \
+SUBDIR= include libamu .WAIT \
+	amd amq doc fixmount fsinfo hlfsd mk-amd-map pawd \
 	scripts wire-test
+SUBDIR_PARALLEL=
 
 .include <bsd.subdir.mk>
