--- a/usr.sbin/amd/doc/Makefile
+++ b/usr.sbin/amd/doc/Makefile
@@ -1,6 +1,7 @@
+# $MidnightBSD$
 # 	This file is under a "BSD" copyright (c) by David O'Brien 1998.
 
-# $FreeBSD$
+# $FreeBSD: stable/10/usr.sbin/amd/doc/Makefile 80029 2001-07-20 06:20:32Z obrien $
 
 .PATH: ${.CURDIR}/../../../contrib/amd/doc
 
