--- a/usr.sbin/amd/hlfsd/Makefile
+++ b/usr.sbin/amd/hlfsd/Makefile
@@ -1,9 +1,10 @@
+# $MidnightBSD$
 # ex:ts=8
 #
 # Makefile for amd
 # 	This file is under a "BSD" copyright (c) by David O'Brien 1998
 #
-# $FreeBSD$
+# $FreeBSD: stable/10/usr.sbin/amd/hlfsd/Makefile 125433 2004-02-04 11:59:08Z ru $
 
 .PATH: ${.CURDIR}/../../../contrib/amd/hlfsd
 
