--- a/usr.sbin/amd/mk-amd-map/Makefile
+++ b/usr.sbin/amd/mk-amd-map/Makefile
@@ -1,9 +1,10 @@
+# $MidnightBSD$
 # ex:ts=8
 #
 # Makefile for amd
 # 	This file is under a "BSD" copyright (c) by David O'Brien 1998
 #
-# $FreeBSD$
+# $FreeBSD: stable/10/usr.sbin/amd/mk-amd-map/Makefile 174305 2007-12-05 16:25:43Z obrien $
 
 .PATH: ${.CURDIR}/../../../contrib/amd/mk-amd-map
 
