--- a/usr.sbin/amd/scripts/Makefile
+++ b/usr.sbin/amd/scripts/Makefile
@@ -1,4 +1,5 @@
-# $FreeBSD$
+# $MidnightBSD$
+# $FreeBSD: stable/10/usr.sbin/amd/scripts/Makefile 80029 2001-07-20 06:20:32Z obrien $
 
 .PATH: ${.CURDIR}/../../../contrib/amd/scripts
 
