--- a/usr.sbin/bluetooth/Makefile
+++ b/usr.sbin/bluetooth/Makefile
@@ -1,12 +1,11 @@
-# $Id: Makefile,v 1.3 2013-01-01 17:41:47 laffer1 Exp $
 # $MidnightBSD$
+# $Id: Makefile,v 1.5 2003/09/08 02:28:35 max Exp $
+# $FreeBSD: stable/10/usr.sbin/bluetooth/Makefile 282835 2015-05-13 10:07:50Z ngie $
+
+.include <bsd.own.mk>
 
 SUBDIR= \
-	ath3kfw \
-	bcmfw \
 	bt3cfw \
-	bthidcontrol \
-	bthidd \
 	btpand \
 	hccontrol \
 	hcsecd \
@@ -16,6 +15,13 @@ SUBDIR= \
 	rfcomm_pppd \
 	sdpcontrol \
 	sdpd
+
+.if ${MK_USB} != "no"
+SUBDIR+=	ath3kfw
+SUBDIR+=	bcmfw
+SUBDIR+=	bthidcontrol
+SUBDIR+=	bthidd
+.endif
 
 .include <bsd.subdir.mk>
 
