--- a/usr.sbin/bluetooth/hcsecd/Makefile
+++ b/usr.sbin/bluetooth/hcsecd/Makefile
@@ -1,5 +1,6 @@
-# $Id: Makefile,v 1.2 2013-01-01 17:41:47 laffer1 Exp $
 # $MidnightBSD$
+# $Id: Makefile,v 1.8 2003/08/14 20:06:20 max Exp $
+# $FreeBSD: stable/10/usr.sbin/bluetooth/hcsecd/Makefile 135245 2004-09-14 20:04:33Z emax $
 
 PROG=		hcsecd
 MAN=		hcsecd.8 hcsecd.conf.5
