--- a/usr.sbin/bluetooth/hcsecd/hcsecd.conf
+++ b/usr.sbin/bluetooth/hcsecd/hcsecd.conf
@@ -1,6 +1,6 @@
-#
-# $Id: hcsecd.conf,v 1.2 2013-01-01 17:41:47 laffer1 Exp $
 # $MidnightBSD$
+# $Id: hcsecd.conf,v 1.1 2002/11/24 20:22:39 max Exp $
+# $FreeBSD: stable/10/usr.sbin/bluetooth/hcsecd/hcsecd.conf 114879 2003-05-10 21:50:37Z julian $
 #
 # HCI security daemon configuration file
 #
