--- a/.gitattributes
+++ b/.gitattributes
@@ -77384,6 +77384,8 @@ usr.sbin/bsdinstall/partedit/part_wizard.c -text
 usr.sbin/bsdinstall/partedit/partedit.c -text
 usr.sbin/bsdinstall/partedit/partedit.h -text
 usr.sbin/bsdinstall/partedit/partedit_generic.c -text
+usr.sbin/bsdinstall/partedit/partedit_pc98.c svneol=native#text/plain
+usr.sbin/bsdinstall/partedit/partedit_powerpc.c svneol=native#text/plain
 usr.sbin/bsdinstall/partedit/partedit_sparc64.c -text
 usr.sbin/bsdinstall/partedit/partedit_x86.c -text
 usr.sbin/bsdinstall/partedit/sade.8 svneol=native#text/plain
