--- a/.gitattributes
+++ b/.gitattributes
@@ -76010,7 +76010,7 @@ usr.bin/jot/jot.c -text
 usr.bin/kdump/Makefile -text
 usr.bin/kdump/kdump.1 -text
 usr.bin/kdump/kdump.c -text
-usr.bin/kdump/kdump_subr.h -text
+usr.bin/kdump/linux32_syscalls.conf svneol=native#text/plain
 usr.bin/kdump/linux_syscalls.conf -text
 usr.bin/kdump/mkioctls -text
 usr.bin/kdump/mksubr -text
