--- a/usr.bin/tr/Makefile
+++ b/usr.bin/tr/Makefile
@@ -1,9 +1,14 @@
-#	@(#)Makefile	8.1 (Berkeley) 6/6/93
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 6/6/93
+# $FreeBSD: stable/10/usr.bin/tr/Makefile 264996 2014-04-27 01:15:10Z jmmv $
+
+.include <bsd.own.mk>
 
 PROG=	tr
 SRCS=	cmap.c cset.c str.c tr.c
 
-WARNS?=	1
+.if ${MK_TESTS} != "no"
+SUBDIR+= tests
+.endif
 
 .include <bsd.prog.mk>
