--- a/usr.bin/time/Makefile
+++ b/usr.bin/time/Makefile
@@ -1,5 +1,6 @@
-#	@(#)Makefile	8.1 (Berkeley) 6/6/93
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 6/6/93
+# $FreeBSD: stable/10/usr.bin/time/Makefile 201386 2010-01-02 10:27:05Z ed $
 
 PROG=	time
 
