--- a/usr.bin/tee/Makefile
+++ b/usr.bin/tee/Makefile
@@ -1,5 +1,6 @@
-#	@(#)Makefile	8.1 (Berkeley) 6/6/93
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 6/6/93
+# $FreeBSD: stable/10/usr.bin/tee/Makefile 87714 2001-12-12 00:06:52Z markm $
 
 PROG=	tee
 
