--- a/.gitattributes
+++ b/.gitattributes
@@ -77440,6 +77440,7 @@ usr.sbin/bsdinstall/scripts/adduser -text
 usr.sbin/bsdinstall/scripts/auto -text
 usr.sbin/bsdinstall/scripts/checksum -text
 usr.sbin/bsdinstall/scripts/config -text
+usr.sbin/bsdinstall/scripts/entropy -text
 usr.sbin/bsdinstall/scripts/hostname -text
 usr.sbin/bsdinstall/scripts/jail -text
 usr.sbin/bsdinstall/scripts/keymap -text
