update script list

--- a/usr.sbin/bsdinstall/scripts/Makefile
+++ b/usr.sbin/bsdinstall/scripts/Makefile
@@ -1,11 +1,11 @@
 # $MidnightBSD$
-# $FreeBSD: src/usr.sbin/bsdinstall/scripts/Makefile,v 1.5 2011/07/09 23:01:54 nwhitehorn Exp $
+# $FreeBSD: stable/10/usr.sbin/bsdinstall/scripts/Makefile 291819 2015-12-04 19:16:56Z bdrewery $
 
-SCRIPTS= auto adduser checksum config hostname jail keymap \
-	 mirrorselect mount netconfig netconfig_ipv4 netconfig_ipv6 rootpass \
-	 script services time umount wlanconfig
-BINDIR= /usr/libexec/bsdinstall
+SCRIPTS= auto adduser checksum config entropy hostname jail \
+	 keymap mirrorselect mount netconfig netconfig_ipv4 netconfig_ipv6 \
+	 rootpass script services time umount wlanconfig zfsboot
+BINDIR= ${LIBEXECDIR}/bsdinstall
 
-NO_MAN=	true
+MAN=
 
 .include <bsd.prog.mk>
