--- a/bin/cat/Makefile
+++ b/bin/cat/Makefile
@@ -1,7 +1,13 @@
-#	@(#)Makefile	8.1 (Berkeley) 5/31/93
-# $FreeBSD: src/bin/cat/Makefile,v 1.7 2001/12/04 01:57:37 obrien Exp $
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 5/31/93
+# $FreeBSD: stable/10/bin/cat/Makefile 292282 2015-12-15 18:09:03Z ngie $
+
+.include <bsd.own.mk>
 
 PROG=	cat
+
+.if ${MK_TESTS} != "no"
+SUBDIR+=	tests
+.endif
 
 .include <bsd.prog.mk>
