--- a/bin/ed/test/Makefile
+++ b/bin/ed/test/Makefile
@@ -1,4 +1,5 @@
-# $FreeBSD: src/bin/ed/test/Makefile,v 1.9 1999/08/27 23:14:17 peter Exp $
+# $MidnightBSD$
+# $FreeBSD: stable/10/bin/ed/test/Makefile 50471 1999-08-27 23:15:48Z peter $
 
 SHELL=	/bin/sh
 ED=	${.OBJDIR}/ed
