--- a/bin/echo/Makefile
+++ b/bin/echo/Makefile
@@ -1,7 +1,13 @@
-#	@(#)Makefile	8.1 (Berkeley) 5/31/93
-# $FreeBSD: src/bin/echo/Makefile,v 1.8 2001/12/04 01:57:40 obrien Exp $
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 5/31/93
+# $FreeBSD: stable/10/bin/echo/Makefile 320712 2017-07-06 05:28:35Z ngie $
+
+.include <bsd.own.mk>
 
 PROG=	echo
+
+.if ${MK_TESTS} != "no"
+SUBDIR+= 	tests
+.endif
 
 .include <bsd.prog.mk>
