sync chio with freebsd 10 stable

--- a/bin/chio/Makefile
+++ b/bin/chio/Makefile
@@ -1,5 +1,5 @@
 # $MidnightBSD$
-# $FreeBSD: src/bin/chio/Makefile,v 1.12 2005/01/27 13:25:09 delphij Exp $
+# $FreeBSD: stable/10/bin/chio/Makefile 140902 2005-01-27 13:25:09Z delphij $
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
 
 PROG=	chio
