--- a/bin/chmod/Makefile
+++ b/bin/chmod/Makefile
@@ -1,7 +1,13 @@
-#	@(#)Makefile	8.1 (Berkeley) 5/31/93
-# $FreeBSD: src/bin/chmod/Makefile,v 1.10 2002/07/15 12:08:21 sheldonh Exp $
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 5/31/93
+# $FreeBSD: stable/10/bin/chmod/Makefile 321130 2017-07-18 16:27:10Z ngie $
+
+.include <bsd.own.mk>
 
 PROG=	chmod
+
+.if ${MK_TESTS} != "no"
+SUBDIR+=	tests
+.endif
 
 .include <bsd.prog.mk>
