--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,11 @@
 20130220/vis.3 -text
 20130220/vis.c -text
 20130220/vis.h -text
+20170423/unvis.3 -text
+20170423/unvis.c -text
+20170423/vis.3 -text
+20170423/vis.c -text
+20170423/vis.h -text
 dist/unvis.3 -text
 dist/unvis.c -text
 dist/vis.3 -text
