--- a/.gitattributes
+++ b/.gitattributes
@@ -17634,19 +17634,8 @@ contrib/ldns/update.c -text
 contrib/ldns/util.c -text
 contrib/ldns/wire2host.c -text
 contrib/ldns/zone.c -text
-contrib/less/COPYING -text
 contrib/less/INSTALL -text
 contrib/less/LICENSE -text
-contrib/less/Makefile.aut -text
-contrib/less/Makefile.dsb -text
-contrib/less/Makefile.dsg -text
-contrib/less/Makefile.dsu -text
-contrib/less/Makefile.in -text
-contrib/less/Makefile.o2e -text
-contrib/less/Makefile.o9c -text
-contrib/less/Makefile.o9u -text
-contrib/less/Makefile.wnb -text
-contrib/less/Makefile.wnm -text
 contrib/less/NEWS -text
 contrib/less/README -text
 contrib/less/brac.c -text
@@ -17656,34 +17645,25 @@ contrib/less/charset.h -text
 contrib/less/cmd.h -text
 contrib/less/cmdbuf.c -text
 contrib/less/command.c -text
-contrib/less/configure -text
-contrib/less/configure.ac -text
+contrib/less/compose.uni -text
 contrib/less/cvt.c -text
 contrib/less/decode.c -text
-contrib/less/defines.ds -text
-contrib/less/defines.h.in -text
-contrib/less/defines.o2 -text
-contrib/less/defines.o9 -text
-contrib/less/defines.wn -text
 contrib/less/edit.c -text
 contrib/less/filename.c -text
+contrib/less/fmt.uni -text
 contrib/less/forwback.c -text
 contrib/less/funcs.h -text
 contrib/less/help.c -text
 contrib/less/ifile.c -text
 contrib/less/input.c -text
-contrib/less/install.sh -text
 contrib/less/jump.c -text
 contrib/less/less.h -text
 contrib/less/less.hlp -text
-contrib/less/less.man -text
 contrib/less/less.nro -text
 contrib/less/lessecho.c -text
-contrib/less/lessecho.man -text
 contrib/less/lessecho.nro -text
 contrib/less/lesskey.c -text
 contrib/less/lesskey.h -text
-contrib/less/lesskey.man -text
 contrib/less/lesskey.nro -text
 contrib/less/lglob.h -text
 contrib/less/line.c -text
@@ -17691,9 +17671,7 @@ contrib/less/linenum.c -text
 contrib/less/lsystem.c -text
 contrib/less/main.c -text
 contrib/less/mark.c -text
-contrib/less/mkfuncs.awk -text
-contrib/less/mkhelp.c -text
-contrib/less/mkinstalldirs -text
+contrib/less/mkutable -text
 contrib/less/optfunc.c -text
 contrib/less/option.c -text
 contrib/less/option.h -text
@@ -17714,7 +17692,9 @@ contrib/less/search.c -text
 contrib/less/signal.c -text
 contrib/less/tags.c -text
 contrib/less/ttyin.c -text
+contrib/less/ubin.uni -text
 contrib/less/version.c -text
+contrib/less/wide.uni -text
 contrib/libarchive/CMakeLists.txt -text
 contrib/libarchive/COPYING -text
 contrib/libarchive/INSTALL -text
