--- a/usr.bin/less/Makefile
+++ b/usr.bin/less/Makefile
@@ -1,11 +1,12 @@
-# $FreeBSD: src/usr.bin/less/Makefile,v 1.10 2005/05/17 11:41:01 ru Exp $
-# $MidnightBSD: src/usr.bin/less/Makefile,v 1.4 2012/12/31 08:14:04 laffer1 Exp $
+# $MidnightBSD$
+# $FreeBSD: stable/10/usr.bin/less/Makefile 207842 2010-05-10 06:59:50Z mm $
 
 PROG=	less
-SRCS=	main.c screen.c brac.c ch.c charset.c cmdbuf.c command.c cvt.c decode.c \
-	edit.c filename.c forwback.c help.c ifile.c input.c jump.c line.c \
-	linenum.c lsystem.c mark.c optfunc.c option.c opttbl.c os.c output.c \
-	pattern.c position.c prompt.c search.c signal.c tags.c ttyin.c version.c
+SRCS=	main.c screen.c brac.c ch.c charset.c cmdbuf.c command.c cvt.c \
+	decode.c edit.c filename.c forwback.c help.c ifile.c input.c \
+	jump.c line.c linenum.c lsystem.c mark.c optfunc.c option.c \
+	opttbl.c os.c output.c pattern.c position.c prompt.c search.c \
+	signal.c tags.c ttyin.c version.c
 SCRIPTS=lesspipe.sh zless.sh
 SCRIPTSNAME_lesspipe.sh=lesspipe.sh
 DPADD=	${LIBTERMCAP}
