--- a/usr.bin/less/Makefile.common
+++ b/usr.bin/less/Makefile.common
@@ -1,10 +1,10 @@
-# $MidnightBSD: src/usr.bin/less/Makefile.common,v 1.2 2007/04/10 22:05:46 laffer1 Exp $
+# $MidnightBSD$
+# $FreeBSD: stable/10/usr.bin/less/Makefile.common 201386 2010-01-02 10:27:05Z ed $
 
 LSDIR=	${.CURDIR}/../../contrib/less
 .PATH:	${LSDIR}
 
 CFLAGS+=-I${.CURDIR}/../less -I${LSDIR}
-
 WARNS?=	1
 
 .SUFFIXES: .nro .1
