--- a/usr.bin/su/Makefile
+++ b/usr.bin/su/Makefile
@@ -1,5 +1,6 @@
-#	@(#)Makefile	8.1 (Berkeley) 7/19/93
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 7/19/93
+# $FreeBSD: stable/10/usr.bin/su/Makefile 226428 2011-10-16 09:09:33Z ed $
 
 .include <bsd.own.mk>
 
