--- a/libexec/comsat/Makefile
+++ b/libexec/comsat/Makefile
@@ -1,6 +1,6 @@
-#	@(#)Makefile	8.1 (Berkeley) 6/4/93
-# $FreeBSD: src/libexec/comsat/Makefile,v 1.8 2001/03/26 14:22:03 ru Exp $
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 6/4/93
+# $FreeBSD: stable/10/libexec/comsat/Makefile 74814 2001-03-26 14:22:12Z ru $
 
 PROG=	comsat
 MAN=	comsat.8
