--- a/libexec/telnetd/Makefile
+++ b/libexec/telnetd/Makefile
@@ -1,12 +1,12 @@
 # $MidnightBSD$
-# $FreeBSD: src/libexec/telnetd/Makefile,v 1.26 2005/06/10 06:12:51 des Exp $
+# $FreeBSD: stable/10/libexec/telnetd/Makefile 321267 2017-07-20 00:52:11Z ngie $
 
 # Do not define -DKLUDGELINEMODE, as it does not interact well with many
 # telnet implementations.
 
 .include <bsd.own.mk>
 
-TELNETDIR=	${.CURDIR}/../../contrib/telnet
+TELNETDIR=	${SRCTOP}/contrib/telnet
 .PATH:		${TELNETDIR}/telnetd
 
 PROG=		telnetd
@@ -28,11 +28,12 @@ CFLAGS+=	-DINET6
 CFLAGS+=	-I${TELNETDIR}
 CFLAGS+=	-I${TELNETDIR}/telnet
 
-LIBTELNET=	${.OBJDIR}/../../lib/libtelnet/libtelnet.a
+LIBTELNET=	${OBJTOP}/lib/libtelnet/libtelnet.a
 
 DPADD=		${LIBUTIL} ${LIBTERMCAP} ${LIBTELNET}
 LDADD=		-lutil -ltermcap ${LIBTELNET}
 
+# XXX for src/release/picobsd
 .if !defined(RELEASE_CRUNCH)
 .if ${MK_OPENSSL} != "no"
 SRCS+=		authenc.c
